--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,4 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     name: test
     steps: 
+      - run: echo "ToDay = $(date + %y%m%d)" >> $GITHUB_ENV
       - run: echo hello world
+      - run: echo today is $ToDay
