--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r test/test-requirements.txt
-          coverage run -m pytest test/test_extractor.py
+          pytest test/test_extractor.py
       - name: get_time
         run: echo "The current time is $(date)"
