--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,8 @@ name: workflow
 on: 
   push:
     branches: [main]
+  schedule:
+    - cron: '0 * * * *'
 jobs: 
   schedule_for_github_action:
     runs-on: ubuntu-latest
